--- a/index.html
+++ b/index.html
@@ -218,10 +218,9 @@
                 class="img-fluid service-img"
               />
               <div class="service-card">
-                <h3>Primary Healthcare</h3>
+                <h3>Pediatrics Nursing</h3>
                 <p>
-                  Comprehensive healthcare services for all ages with expert
-                  medical professionals.
+                  Our Pediatric Nursing Services are committed to delivering compassionate, top-quality care customized to address the unique needs of children from infancy to adolescence.
                 </p>
               </div>
             </div>
@@ -238,10 +237,9 @@
                 class="img-fluid service-img"
               />
               <div class="service-card">
-                <h3>Specialist Care</h3>
+                <h3>Hospice Care</h3>
                 <p>
-                  Advanced medical care with specialized treatments tailored to
-                  your needs.
+                  We offer compassionate hospice care focused on ensuring comfort, preserving dignity, and enhancing quality of life for patients and their families during life’s most difficult times.
                 </p>
               </div>
             </div>
