--- a/pages/career.html
+++ b/pages/career.html
@@ -105,20 +105,21 @@
         <!-- Join Heading Content -->
 
         <p class="lead text-muted">
-          We are looking for passionate professionals to be part of our growing
-          healthcare family. If you are dedicated, skilled, and eager to make a
-          difference, explore our open positions below.
+          Join our dynamic team dedicated to making a positive impact in other  people’s lives. 
+          Explore exciting opportunities to contribute your skills and 
+          grow professionally in a supportive and dynamic environment. 
+          Please fill out the form below to send your application.
         </p>
 
         <!-- Hiring Positions -->
         <div class="hiring-positions text-start mt5">
-          <h3 class="mb-3">We're Hiring:</h3>
+          <h3 class="mb-3">Here are our hiring positions:</h3>
           <ul class="list-unstyled">
-            <li><span class="bullet"></span> Medical Doctor</li>
-            <li><span class="bullet"></span> Registered Nurse</li>
-            <li><span class="bullet"></span> Laboratory Technician</li>
-            <li><span class="bullet"></span> Administrative Assistant</li>
-            <li><span class="bullet"></span> Pharmacist</li>
+            <li><span class="bullet"></span> CNA – Hospice Aide</li>
+            <li><span class="bullet"></span> LVN/Registered Nurse</li>
+            <li><span class="bullet"></span> Caregivers</li>
+            <li><span class="bullet"></span> Certified Nursing Assistant</li>
+            <li><span class="bullet"></span> Case Manager</li>
           </ul>
         </div>
       </div>
