--- a/pages/booking.html
+++ b/pages/booking.html
@@ -72,10 +72,10 @@
     
                         <div class="row">
                             <div class="col-md-6 mb-3">
-                                <input type="date" class="form-control" required>
+                                <input type="date" class="form-control" placeholder="Date" required>
                             </div>
                             <div class="col-md-6 mb-3">
-                                <input type="time" class="form-control" required>
+                                <input type="time" class="form-control" placeholder="Time" required>
                             </div>
                         </div>
     
