--- a/pages/services.html
+++ b/pages/services.html
@@ -175,10 +175,9 @@
                 class="img-fluid service-img"
               />
               <div class="service-card">
-                <h3>Primary Healthcare</h3>
+                <h3>Pediatrics Nursing</h3>
                 <p>
-                  Comprehensive healthcare services for all ages with expert
-                  medical professionals.
+                  Our Pediatric Nursing Services are committed to delivering compassionate, top-quality care customized to address the unique needs of children from infancy to adolescence.
                 </p>
               </div>
             </div>
@@ -195,10 +194,9 @@
                 class="img-fluid service-img"
               />
               <div class="service-card">
-                <h3>Specialist Care</h3>
+                <h3>Hospice Care</h3>
                 <p>
-                  Advanced medical care with specialized treatments tailored to
-                  your needs.
+                  We offer compassionate hospice care focused on ensuring comfort, preserving dignity, and enhancing quality of life for patients and their families during life’s most difficult times.
                 </p>
               </div>
             </div>
@@ -215,10 +213,9 @@
                 class="img-fluid service-img"
               />
               <div class="service-card">
-                <h3>Emergency Services</h3>
+                <h3>IV Infusion Therapy</h3>
                 <p>
-                  Immediate medical attention with round-the-clock emergency
-                  response.
+                  we provide expert IV infusion therapy to deliver essential nutrients, medications, and hydration directly into the bloodstream. This effective treatment method is designed to support your health and recovery with precision and care.
                 </p>
               </div>
             </div>
@@ -275,10 +272,9 @@
                 class="img-fluid service-img"
               />
               <div class="service-card">
-                <h3>Home Healthcare</h3>
+                <h3>Medical Social Workers</h3>
                 <p>
-                  Professional healthcare services delivered right at your
-                  doorstep for convenience.
+                  We provide compassionate and expert medical social work services,  addressing the emotional, social, and environmental needs of our  clients.
                 </p>
               </div>
             </div>
