dashbord pages initial loaded

--- a/pages/appointmentdashboard.html
+++ b/pages/appointmentdashboard.html
@@ -156,7 +156,7 @@
               src="/assets/images/animated-logo.gif"
               alt="Company Logo"
               class="img-fluid"
-              style="height: 80px"
+              style="width:200px"
             />
           
           </div>
@@ -182,7 +182,7 @@
               </a>
               <a href="#">
                 <img
-                  src="/assets/images/Ellipse 17.png"
+                  src="/assets/images/profile-img.jpg"
                   alt="Profile"
                   class="profile-img rounded-circle"
                 />
@@ -196,7 +196,7 @@
               class="dashboard-title d-flex justify-content-between align-items-center"
             >
               <div>
-                <h1>Hello Dr. Ernest</h1>
+                <h1>Hello Dr. Lynda C. Nnaji</h1>
                 <h2>Welcome on board</h2>
               </div>
             </div>
@@ -231,7 +231,7 @@
                         <div class="appointment-date d-flex mb-1">
                           <div class="align-items-center">
                             <img
-                              src="/assets/images/uil_calender.png"
+                              src="/assets/images/calendar.gif"
                               alt="Calendar"
                               class="img-fluid"
                             />
@@ -239,7 +239,7 @@
                           </div>
                           <div class="align-items-center">
                             <img
-                              src="/assets/images/ri_time-line.png"
+                              src="/assets/images/clock.gif"
                               alt="Clock"
                               class="img-fluid"
                             />
@@ -278,7 +278,7 @@
                         <div class="appointment-date d-flex mb-1">
                           <div class="align-items-center">
                             <img
-                              src="/assets/images/uil_calender.png"
+                              src="/assets/images/calendar.gif"
                               alt="Calendar"
                               class="img-fluid"
                             />
@@ -286,7 +286,7 @@
                           </div>
                           <div class="">
                             <img
-                              src="/assets/images/ri_time-line.png"
+                              src="/assets/images/clock.gif"
                               alt="Clock"
                               class="img-fluid"
                             />
@@ -325,7 +325,7 @@
                         <div class="appointment-date d-flex mb-1">
                           <div class="align-items-center">
                             <img
-                              src="/assets/images/uil_calender.png"
+                              src="/assets/images/calendar.gif"
                               alt="Calendar"
                               class="img-fluid"
                             />
@@ -333,7 +333,7 @@
                           </div>
                           <div class="">
                             <img
-                              src="/assets/images/ri_time-line.png"
+                              src="/assets/images/clock.gif"
                               alt="Clock"
                               class="img-fluid"
                             />
@@ -372,7 +372,7 @@
                         <div class="appointment-date d-flex mb-1">
                           <div class="align-items-center">
                             <img
-                              src="/assets/images/uil_calender.png"
+                              src="/assets/images/calendar.gif"
                               alt="Calendar"
                               class="img-fluid"
                             />
@@ -380,7 +380,7 @@
                           </div>
                           <div class="">
                             <img
-                              src="/assets/images/ri_time-line.png"
+                              src="/assets/images/clock.gif"
                               alt="Clock"
                               class="img-fluid"
                             />
@@ -419,7 +419,7 @@
                         <div class="appointment-date d-flex mb-1">
                           <div class="align-items-center">
                             <img
-                              src="/assets/images/uil_calender.png"
+                              src="/assets/images/calendar.gif"
                               alt="Calendar"
                               class="img-fluid"
                             />
@@ -427,7 +427,7 @@
                           </div>
                           <div class="">
                             <img
-                              src="/assets/images/ri_time-line.png"
+                              src="/assets/images/clock.gif"
                               alt="Clock"
                               class="img-fluid"
                             />
@@ -466,7 +466,7 @@
                         <div class="appointment-date d-flex mb-1">
                           <div class="align-items-center">
                             <img
-                              src="/assets/images/uil_calender.png"
+                              src="/assets/images/calendar.gif"
                               alt="Calendar"
                               class="img-fluid"
                             />
@@ -474,7 +474,7 @@
                           </div>
                           <div class="">
                             <img
-                              src="/assets/images/ri_time-line.png"
+                              src="/assets/images/clock.gif"
                               alt="Clock"
                               class="img-fluid"
                             />
@@ -605,7 +605,7 @@
                                                 <p class="mb-0">Stomach pains</p>
                                             </div>
                                             <div class="d-flex align-items-center ml-auto">
-                                                <img src="/assets/images/ri_time-line.png" alt="Clock" class="img-fluid mr-2">
+                                                <img src="/assets/images/clock.gif" alt="Clock" class="img-fluid mr-2">
                                                 <span>8:20 AM</span>
                                             </div>
                                         </div>
@@ -622,7 +622,7 @@
                                                 <p class="mb-0">Headache</p>
                                             </div>
                                             <div class="d-flex align-items-center ml-auto">
-                                                <img src="/assets/images/ri_time-line.png" alt="Clock" class="img-fluid mr-2">
+                                                <img src="/assets/images/clock.gif" alt="Clock" class="img-fluid mr-2">
                                                 <span>9:30 AM</span>
                                             </div>
                                         </div>
@@ -639,7 +639,7 @@
                                                 <p class="mb-0">Fever</p>
                                             </div>
                                             <div class="d-flex align-items-center ml-auto">
-                                                <img src="/assets/images/ri_time-line.png" alt="Clock" class="img-fluid mr-2">
+                                                <img src="/assets/images/clock.gif" alt="Clock" class="img-fluid mr-2">
                                                 <span>10:00 AM</span>
                                             </div>
                                         </div>
