--- a/pages/blogdashboard.html
+++ b/pages/blogdashboard.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="../assets/vendor/bootstrap/css/bootstrap.min.css"
+      href="/assets/vendor/bootstrap/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="../assets/vendor/bootstrap/font-awesome-4.7.0/css/font-awesome.min.css"
+      href="/assets/vendor/bootstrap/font-awesome-4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.11.0/main.min.css"
@@ -151,14 +151,12 @@
       >
       <div class="dashboard-heading d-flex">
         <img
-          src="/assets/images/logo.png"
+          src="/assets/images/animated-logo.gif"
           alt="Company Logo"
           class="img-fluid"
-          style="height: 40px"
+          style="width: 200px"
         />
-        <h5 class="">
-          MARIBRA HEALTHCARE <br />LIMITED.
-        </h5>
+        
       </div>
         <input
           type="text"
@@ -182,7 +180,7 @@
           </a>
           <a href="#">
             <img
-              src="/assets/images/Ellipse 17.png"
+              src="/assets/images/profile-img.jpg"
               alt="Profile"
               class="profile-img rounded-circle"
             />
@@ -352,9 +350,9 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.11.0/main.min.js"></script>
-    <script src="../assets/vendor/jquery/jquery.min.js"></script>
-    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/js/script.js"></script>
+    <script src="/assets/vendor/jquery/jquery.min.js"></script>
+    <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/script.js"></script>
 
     <!-- Custom Scripts -->
     <script>
