--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -155,12 +155,12 @@
           <div
             class="dashboard-header d-flex justify-content-end align-items-center p-2"
           >
-          <div class="dashboard-heading d-flex">
+          <div class="dashboard-heading">
             <img
               src="/assets/images/animated-logo.gif"
               alt="Company Logo"
               class="img-fluid"
-              style="height: 80px"
+              style="width: 200px"
             />
           
           </div>
@@ -186,7 +186,7 @@
               </a>
               <a href="#">
                 <img
-                  src="/assets/images/Ellipse 17.png"
+                  src="/assets/images/profile-img.jpg"
                   alt="Profile"
                   class="profile-img rounded-circle"
                 />
@@ -198,7 +198,7 @@
        <div class="col-md-9 content justify-content-center">
           <div class="main-content p-4 graph-section">
             <div class="dashboard-title">
-              <h1>Hello Dr. Ernest</h1>
+              <h1>Hello Dr. Lynda C. Nnaji</h1>
               <h2>Welcome on board</h2>
             </div>
             <!-- Horizontal Cards -->
