--- a/pages/login.html
+++ b/pages/login.html
@@ -87,7 +87,8 @@
               </div>
 
               <!-- Login Button -->
-              <button class="btn btn-submit w-100 mb-3">Login</button>
+               <a href="/pages/dashboard.html" class="btn btn-submit w-100 mb-3">Login</a>
+             
 
               <!-- OR Divider -->
               <div class="or-divider mb-3">OR</div>
