--- a/pages/settings.html
+++ b/pages/settings.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../assets/vendor/bootstrap/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="../assets/vendor/bootstrap/font-awesome-4.7.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/vendor/bootstrap/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/assets/vendor/bootstrap/font-awesome-4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.11.0/main.min.css" />
   <title>Settings</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
