appointment dashboard worked on

--- a/pages/blogdashboard.html
+++ b/pages/blogdashboard.html
@@ -194,7 +194,7 @@
               class="dashboard-title d-flex justify-content-between align-items-center"
             >
               <div>
-                <h1>Hello Dr. Ernest</h1>
+                <h1>Hello Dr. Lynda C. Nnaji</h1>
                 <h2>Welcome on board</h2>
               </div>
             </div>
@@ -222,12 +222,7 @@
                       <h4 class="blog-card-header">Nutrition Tips</h4>
                       <div class="blog-card-body">
                         <p>
-                          Good nutrition is an important part of leading a
-                          healthy lifestyle. Combined with physical activity,
-                          your diet can help you to reach and maintain a healthy
-                          weight, reduce your risk of chronic diseases (like
-                          heart disease and cancer), and promote your overall
-                          health.
+                          A strong immune system is essential for protecting the body against illnesses and infections, and maintaining a healthy lifestyle plays a key role in boosting immunity. Eating a balanced diet rich in vitamins, minerals, and antioxidants—such as Vitamin C from citrus fruits and zinc from nuts—helps strengthen the body’s defenses. Staying hydrated, getting at least 7–9 hours of quality sleep, and managing stress through meditation or deep breathing further support immune function. Regular exercise, such as 30 minutes of walking or yoga, improves circulation and overall health, while avoiding smoking and excessive alcohol consumption helps prevent immune suppression. Ginger, a powerful natural remedy, is packed with antioxidants and anti-inflammatory properties that aid digestion, relieve cold symptoms, and boost immunity.
                         </p>
                         <span class="additional-text"
                           >Remember to eat a variety of foods to ensure you get
@@ -333,7 +328,7 @@
                     <!-- Add more form fields as needed -->
                     <div class="img-button d-flex mb-3">
                       <img src="/assets/images/Vector.png" alt="" class="img-fluid"/><button
-                        class="blog-btn"
+                        class="blog-btn w-50"
                         type="submit"
                       >
                       Add blog
