appointment dashboard worked on

--- a/pages/appointmentdashboard.html
+++ b/pages/appointmentdashboard.html
@@ -604,7 +604,7 @@
                                                 <h5 class="card-title mb-0">Nana Ato Ato</h5>
                                                 <p class="mb-0">Stomach pains</p>
                                             </div>
-                                            <div class="d-flex align-items-center ml-auto">
+                                            <div class="d-flex align-items-center ml-auto clock">
                                                 <img src="/assets/images/clock.gif" alt="Clock" class="img-fluid mr-2">
                                                 <span>8:20 AM</span>
                                             </div>
@@ -621,7 +621,7 @@
                                                 <h5 class="card-title mb-0">Nana Ato Ato</h5>
                                                 <p class="mb-0">Headache</p>
                                             </div>
-                                            <div class="d-flex align-items-center ml-auto">
+                                            <div class="d-flex align-items-center ml-auto clock">
                                                 <img src="/assets/images/clock.gif" alt="Clock" class="img-fluid mr-2">
                                                 <span>9:30 AM</span>
                                             </div>
@@ -638,7 +638,7 @@
                                                 <h5 class="card-title mb-0">Kojo Baako</h5>
                                                 <p class="mb-0">Fever</p>
                                             </div>
-                                            <div class="d-flex align-items-center ml-auto">
+                                            <div class="d-flex align-items-center ml-auto clock">
                                                 <img src="/assets/images/clock.gif" alt="Clock" class="img-fluid mr-2">
                                                 <span>10:00 AM</span>
                                             </div>
