--- a/index.html
+++ b/index.html
@@ -256,10 +256,9 @@
                 class="img-fluid service-img"
               />
               <div class="service-card">
-                <h3>Emergency Services</h3>
+                <h3>IV Infusion Therapy</h3>
                 <p>
-                  Immediate medical attention with round-the-clock emergency
-                  response.
+                  we provide expert IV infusion therapy to deliver essential nutrients, medications, and hydration directly into the bloodstream. This effective treatment method is designed to support your health and recovery with precision and care.
                 </p>
               </div>
             </div>
@@ -276,10 +275,10 @@
                 class="img-fluid service-img"
               />
               <div class="service-card">
-                <h3>Telemedicine</h3>
+                <h3>Home Health Aides/
+                  Provider Service</h3>
                 <p>
-                  Virtual healthcare consultations from the comfort of your
-                  home.
+                  Our Home Health Aide services offer compassionate and personalized support to individuals, helping them with daily living activities while ensuring they remain comfortable in their own homes.
                 </p>
               </div>
             </div>
@@ -302,7 +301,7 @@
           data-aos-easing="ease-in-sine"
           data-aos-duration="1000">
             <div class="overlay"></div>
-            <div class="content">
+            <div class="contents">
               <div class="speciality-text">
                 <h2>Our Speciality</h2>
                 <p>
@@ -622,15 +621,15 @@
           <div class="col-md-12 mb-3">
             <div class="contact-item">
               <i class="fas fa-envelope"></i>
-              <a href="mailto:info@wealthliving.com" class="text-white"
-                >info@wealthliving.com</a
+              <a href="info@welihealthcare.comm" class="text-white"
+                >info@welihealthcare.com</a
               >
             </div>
           </div>
           <div class="col-md-6">
             <div class="contact-item">
               <i class="fas fa-phone-alt"></i>
-              <a href="tel:+1234567890" class="text-white">+1 234 567 890</a>
+              <a href="+13462191008" class="text-white">+13462191008</a>
             </div>
           </div>
         </div>
@@ -640,15 +639,16 @@
           <div class="col-md-6 text-start">
             <div class="address">
               <i class="fas fa-map-marker-alt"></i>
-              <p>123 Health Street, Wellness City, USA</p>
+              <p>3007 Stephen Howard court,
+                Missouri city TX 77459</p>
             </div>
           </div>
           <div class="col-md-6 text-md-end text-center">
             <div class="social-icons">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://www.facebook.com/share/1A7nFQeMjf/"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://Wa.me/13462191008"><i class='bx bxl-whatsapp'></i></a>
+              <a href="https://www.instagram.com/wealthy_living_healthcare?igsh=dnJobXlpam1iZWMz"><i class="fab fa-instagram"></i></a>
+              <a href="http://tiktok.com/@wealthyliving.hea"><i class='bx bxl-tiktok' ></i></a>
             </div>
           </div>
         </div>
