--- a/pages/services.html
+++ b/pages/services.html
@@ -232,10 +232,10 @@
                 class="img-fluid service-img"
               />
               <div class="service-card">
-                <h3>Telemedicine</h3>
+                <h3>Home Health Aides/
+                  Provider Service</h3>
                 <p>
-                  Virtual healthcare consultations from the comfort of your
-                  home.
+                  Our Home Health Aide services offer compassionate and personalized support to individuals, helping them with daily living activities while ensuring they remain comfortable in their own homes.
                 </p>
               </div>
             </div>
@@ -252,10 +252,9 @@
                 class="img-fluid service-img"
               />
               <div class="service-card">
-                <h3>Pharmacy Services</h3>
+                <h3>Medical Social Workers</h3>
                 <p>
-                  Easy access to medications with expert pharmacists for
-                  guidance and support.
+                  We provide compassionate and expert medical social work services,  addressing the emotional, social, and environmental needs of our  clients.
                 </p>
               </div>
             </div>
@@ -272,9 +271,10 @@
                 class="img-fluid service-img"
               />
               <div class="service-card">
-                <h3>Medical Social Workers</h3>
+                <h3>Home Rehabilitation 
+                  Services</h3>
                 <p>
-                  We provide compassionate and expert medical social work services,  addressing the emotional, social, and environmental needs of our  clients.
+                  We provide comprehensive home rehabilitation services, delivering  personalized care and therapy in the comfort of our clients' homes.
                 </p>
               </div>
             </div>
@@ -407,6 +407,7 @@
       </div>
     </section>
 
+    
     <!-- Footer Section---- -->
     <footer class="footer-section" data-aos="fade-down"
     data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
@@ -439,15 +440,15 @@
           <div class="col-md-12 mb-3">
             <div class="contact-item">
               <i class="fas fa-envelope"></i>
-              <a href="mailto:info@wealthliving.com" class="text-white"
-                >info@wealthliving.com</a
+              <a href="info@welihealthcare.comm" class="text-white"
+                >info@welihealthcare.com</a
               >
             </div>
           </div>
           <div class="col-md-6">
             <div class="contact-item">
               <i class="fas fa-phone-alt"></i>
-              <a href="tel:+1234567890" class="text-white">+1 234 567 890</a>
+              <a href="+13462191008" class="text-white">+13462191008</a>
             </div>
           </div>
         </div>
@@ -457,15 +458,16 @@
           <div class="col-md-6 text-start">
             <div class="address">
               <i class="fas fa-map-marker-alt"></i>
-              <p>123 Health Street, Wellness City, USA</p>
+              <p>3007 Stephen Howard court,
+                Missouri city TX 77459</p>
             </div>
           </div>
           <div class="col-md-6 text-md-end text-center">
             <div class="social-icons">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://www.facebook.com/share/1A7nFQeMjf/"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://Wa.me/13462191008"><i class='bx bxl-whatsapp'></i></a>
+              <a href="https://www.instagram.com/wealthy_living_healthcare?igsh=dnJobXlpam1iZWMz"><i class="fab fa-instagram"></i></a>
+              <a href="http://tiktok.com/@wealthyliving.hea"><i class='bx bxl-tiktok' ></i></a>
             </div>
           </div>
         </div>
